# URL-Shortener

./: .gitignore  Dockerfile  README.md  app.py  crontab  docker-compose.yaml  pyproject.toml  pyrightconfig.json  recycle.py  setup.py
apis/: auth.py  shortener.py
db_init/: schema.sql
tests/: test_url_shortener.py
user/: user.py
