[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["xd-ai <nichkh19@freeuni.edu.ge>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
pytest = "^6.2.5"
SQLAlchemy = "^1.4.28"
Flask-SQLAlchemy = "^2.5.1"
flask-restx = "^0.5.1"
Flask-HTTPAuth = "^4.5.0"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
